Fixing z-index issue where content appeared over header / nav

--- a/bundles/admin/public/css/layout/main-footer.styl
+++ b/bundles/admin/public/css/layout/main-footer.styl
@@ -5,6 +5,7 @@
   width 240px
   text-align center
   padding 10px 0
+  z-index 1
 
   a
     color #999
